[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/Back.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://ui/window/Window-1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -216.0
margin_right = 245.0
margin_bottom = 216.0
theme = SubResource( 2 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_id_label" type="Label" parent="VBoxContainer"]
margin_right = 490.0
margin_bottom = 40.0
text = "Student ID"
align = 1
valign = 1

[node name="student_id_input" type="LineEdit" parent="VBoxContainer"]
visible = false
margin_top = 65.0
margin_right = 490.0
margin_bottom = 115.0
align = 1
max_length = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_id" type="Label" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 490.0
margin_bottom = 105.0
text = "xxxx-xxxxx"
align = 1
valign = 1

[node name="change_id" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 490.0
margin_bottom = 432.0
size_flags_vertical = 3
text = "CHANGE STUDENT ID"

[node name="submit" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 293.0
margin_right = 490.0
margin_bottom = 432.0
size_flags_vertical = 3

[node name="student_id_error" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 349.0
margin_right = 490.0
margin_bottom = 432.0
text = "Student ID is invalid"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="." instance=ExtResource( 1 )]
anchor_left = 0.047
anchor_top = 0.094
anchor_right = 0.047
anchor_bottom = 0.094
margin_left = -40.202
margin_top = -44.732
margin_right = 39.798
margin_bottom = 35.268

[node name="success_window" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="success_window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.0
margin_top = -192.0
margin_right = 762.0
margin_bottom = 524.0
rect_scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="success_window/TextureRect"]
anchor_left = 0.494
anchor_top = 0.38
anchor_right = 0.494
anchor_bottom = 0.38
margin_left = -414.412
margin_top = -128.08
margin_right = 414.588
margin_bottom = 136.92
custom_fonts/font = SubResource( 3 )
text = "Student I.D has been updated"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKAY" parent="success_window/TextureRect" instance=ExtResource( 2 )]
margin_left = -231.591
margin_top = -284.0
margin_right = 252.409
margin_bottom = -132.0
text = "OKAY"

[node name="wipe_ldboard" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.873
anchor_top = 0.911
anchor_right = 0.873
anchor_bottom = 0.911
margin_left = -144.518
margin_top = -43.6481
margin_right = 135.482
margin_bottom = 44.3519
text = "WIPE LDBOARD"

[connection signal="tree_entered" from="." to="." method="_on_Settings_tree_entered"]
[connection signal="pressed" from="VBoxContainer/change_id" to="." method="_on_change_id_pressed"]
[connection signal="pressed" from="VBoxContainer/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="success_window/TextureRect/OKAY" to="." method="_on_OKAY_pressed"]
[connection signal="pressed" from="wipe_ldboard" to="." method="_on_Button_pressed"]
